Fix overlap of committee/fraternity names

--- a/public/css/gewis-theme.css
+++ b/public/css/gewis-theme.css
@@ -6325,6 +6325,13 @@ Styleguide: buttons.sizes
   margin: 0;
   color: inherit; }
 
+.card .card-content span {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; }
+
 .card .card-details {
   position: absolute;
   background-color: #fff;
